--- a/humechanic/HuMain.css
+++ b/humechanic/HuMain.css
@@ -3,8 +3,9 @@
     margin:0;
   }
   .home{
-    border:2px solid black;
+    border:0.15rem solid black;
     text-align: center;
+    font-size:1.25rem;
     margin:0;
     color:black;
     text-decoration:none;
@@ -12,7 +13,7 @@
   }
   .home :visited {
     color: black;
-   }   
+   }
    .home a:hover {
     color: darkred ;
    }
@@ -22,7 +23,7 @@
    background-color: #333;
   }
   .dropbtn {
-     font-size: 16px;
+     font-size: 1.1rem;
      border-color: black;
      outline: none;
      color: white;
