--- a/humechanic/HuMain.css
+++ b/humechanic/HuMain.css
@@ -1,6 +1,6 @@
   body{
     font-family: "Lato", sans-serif;
-    margin:0;
+    margin: 0;
   }
   .home{
     border:0.15rem solid black;
@@ -17,7 +17,12 @@
    .home a:hover {
     color: darkred ;
    }
-
+   .content{
+     margin-left: .5rem;
+     margin-right: .5rem;
+     margin-top: 0;
+     margin-bottom: 0;
+   }
   .menu{
    overflow: auto;
    background-color: #333;
