--- a/humechanic/HuMain.css
+++ b/humechanic/HuMain.css
@@ -18,8 +18,8 @@
     color: darkred ;
    }
    .content{
-     margin-left: .5rem;
-     margin-right: .5rem;
+     margin-left: 0.5rem;
+     margin-right: 0.5rem;
      margin-top: 0;
      margin-bottom: 0;
    }
