--- a/humechanic/login.css
+++ b/humechanic/login.css
@@ -1,10 +1,16 @@
 .login{
   color:white;
   display: block;
+
   background-color: #445;
+  border: 0.1rem darkblue;
   float: right;
   padding-left:3%;
   overflow: auto;
   width: 17%;
   z-index: 1;
+}
+.login #loginbtn, #signupbtn{
+  display: block inherit;
+  float: center;
 }
