--- a/humechanic/Activities.css
+++ b/humechanic/Activities.css
@@ -1,6 +1,48 @@
+
 .ActivityTitle{
   text-align:left;
   font-size: 3rem;
   font-family:sans-serif;
+}
+html {
+  box-sizing: border-box;
+}
 
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
+.Activity {
+  float: left;
+  width: 24%;
+  margin-bottom: 16px;
+  padding: 0 8px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+}
+.team {
+  padding: 0 16px;
+}
+.Activity img{
+  width: 100%;
+  height: 25rem;
+}
+.team::after, .row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+.team a {
+  border: none;
+  outline: 0;
+  display: inline-block;
+  padding: 8px;
+  color: white;
+  background-color: #000;
+  text-align: center;
+  cursor: pointer;
+  width: 100%;
+}
+
+.team a:hover {
+  background-color: #555;
 }
