--- a/humechanic/HuMain.css
+++ b/humechanic/HuMain.css
@@ -1,3 +1,11 @@
+html {
+  box-sizing: border-box;
+}
+
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
   body{
     font-family: "Lato", sans-serif;
     margin: 0;
@@ -22,7 +30,7 @@
      margin-right: 0.5rem;
      margin-top: 0;
      margin-bottom: 0;
-     
+
    }
   .menu{
    overflow: auto;
