--- a/humechanic/Activities.css
+++ b/humechanic/Activities.css
@@ -1,4 +1,3 @@
-
 .ActivityTitle{
   text-align:left;
   font-size: 3rem;
@@ -14,13 +13,15 @@ html {
 
 .Activity {
   float: left;
-  width: 24%;
+  width: 25%;
   margin-bottom: 16px;
   padding: 0 8px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  height: 100;
 }
 .team {
   padding: 0 16px;
+  height: 20rem;
 }
 .Activity img{
   width: 100%;
@@ -41,6 +42,7 @@ html {
   text-align: center;
   cursor: pointer;
   width: 100%;
+  position:relative;
 }
 
 .team a:hover {
